# JaxWeights

./: LICENSE  README.md  pyproject.toml
jaxweights/: __init__.py  _bundle.py  _context.py  _core.py  _errors.py  _initializers.py
tests/: test_bundle.py  test_core.py  test_errors.py  test_initializers.py  test_jax_transforms.py  test_scopes.py
